[gd_scene load_steps=4 format=3 uid="uid://h0ukpxk0ltan"]

[ext_resource type="Script" path="res://scripts/right_arm_component.gd" id="1_tj0sw"]
[ext_resource type="Texture2D" uid="uid://ct3rsf8e6rga4" path="res://Sprites/TEMP/Sprite-0001.png" id="2_adxjd"]
[ext_resource type="Texture2D" uid="uid://58825vrsur3v" path="res://icon.svg" id="3_o7wci"]

[node name="RightArmComponent" type="Node2D"]
script = ExtResource("1_tj0sw")

[node name="MenuButton" type="TextureButton" parent="."]
offset_left = -25.0
offset_top = -27.0
offset_right = 19.0
offset_bottom = 17.0
texture_normal = ExtResource("2_adxjd")
texture_hover = ExtResource("3_o7wci")

[connection signal="pressed" from="MenuButton" to="." method="_on_texture_button_pressed"]
